--- a/style/style.css
+++ b/style/style.css
@@ -52,6 +52,56 @@ body{
         width: 100%;
         height: 100vh;
     }
+
+    .bubble img{
+        width: 50px;
+        animation: bubble 6s linear infinite;
+        }
+        .bubble{
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            position: absolute;
+            bottom: 0;
+        }
+        @keyframes bubble{
+            0%{
+                transform: translateY(100);
+                opacity: 0;
+            }
+            50%{
+                opacity: 1;
+            }
+            70%{
+                opacity: 1;
+            }
+            100%{
+                transform: translateY(-80vh);
+                opacity: 0;
+            }
+        }
+        .bubble img:nth-child(1){
+            animation-delay: 2s;
+        }
+        .bubble img:nth-child(2){
+            animation-delay: .1s;
+        }
+        .bubble img:nth-child(3){
+            animation-delay: 3ms;
+        }
+        .bubble img:nth-child(4){
+            animation-delay: .5s;
+        }
+        .bubble img:nth-child(5){
+            animation-delay: .1s;
+        }
+        .bubble img:nth-child(6){
+            animation-delay: 2s;
+        }
+        .bubble img:nth-child(7){
+            animation-delay: 1s;
+        }
     /* home section end */
 
 
