--- a/style/style.css
+++ b/style/style.css
@@ -67,7 +67,7 @@ body{
         }
         @keyframes bubble{
             0%{
-                transform: translateY(100);
+                transform: translateY(-80vh);
                 opacity: 0;
             }
             50%{
@@ -77,7 +77,7 @@ body{
                 opacity: 1;
             }
             100%{
-                transform: translateY(-80vh);
+                transform: translateY(-100);
                 opacity: 0;
             }
         }
@@ -91,16 +91,25 @@ body{
             animation-delay: 3ms;
         }
         .bubble img:nth-child(4){
-            animation-delay: .5s;
+            animation-delay: 5s;
         }
         .bubble img:nth-child(5){
             animation-delay: .1s;
         }
         .bubble img:nth-child(6){
-            animation-delay: 2s;
+            animation-delay: .2s;
         }
         .bubble img:nth-child(7){
-            animation-delay: 1s;
+            animation-delay: 4s;
+        }
+        .bubble img:nth-child(8){
+            animation-delay: .2s;
+        }
+        .bubble img:nth-child(9){
+            animation-delay: 1ms;
+        }
+        .bubble img:nth-child(10){
+            animation-delay: .1s;
         }
     /* home section end */
 
