--- a/style/style.css
+++ b/style/style.css
@@ -82,28 +82,28 @@ body{
             }
         }
         .bubble img:nth-child(1){
-            animation-delay: 2s;
+            animation-delay: 4s;
         }
         .bubble img:nth-child(2){
-            animation-delay: .1s;
+            animation-delay: .1ms;
         }
         .bubble img:nth-child(3){
-            animation-delay: 3ms;
+            animation-delay: 3s;
         }
         .bubble img:nth-child(4){
-            animation-delay: 5s;
+            animation-delay: 9s;
         }
         .bubble img:nth-child(5){
             animation-delay: .1s;
         }
         .bubble img:nth-child(6){
-            animation-delay: .2s;
+            animation-delay: 6s;
         }
         .bubble img:nth-child(7){
-            animation-delay: 4s;
+            animation-delay: .9s;
         }
         .bubble img:nth-child(8){
-            animation-delay: .2s;
+            animation-delay: .4s;
         }
         .bubble img:nth-child(9){
             animation-delay: 1ms;
