--- a/style/style.css
+++ b/style/style.css
@@ -149,6 +149,10 @@ body{
         radial-gradient(220px circle at 90% 70%, rgb(151, 144, 144), transparent 100%)
         ;
    }
+.container-serv{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
 .container-2{
     width: 300px;
     height: 400px;
@@ -359,8 +363,27 @@ body{
 }
 /* smaple section end */
 
+/* privious section start */
+.card2{
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background: rgba(255, 255, 255, .2);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, .1);
+    backdrop-filter: blur(5px);
+    border-radius: 18px;
+    padding-bottom:  15px;
+}
+.card2 img{
+    border-radius: 18px;
+    height: 30vh;
 
-
+}
+.previous-sec{
+    background-color: #e7a9cb;
+}
+.previous-work{
+    grid-template-columns: repeat(3, 1fr);
+    margin-left: 100px;
+}
 /* footer section start */
 .footer{
     background:rgb(56, 0, 82);
@@ -378,7 +401,7 @@ color: aliceblue;
 
 
 /* media query for mobile start */
-@media screen and (max-width:767px){
+@media screen and (max-width: 767px){
     .navbar{
         position: fixed;
         top: 0;
@@ -440,18 +463,11 @@ color: aliceblue;
     .first-section{
         width: 100%;
     }
-    .sample-sec{
-        width: 100%;
-    }
-    .sample-sec .project img{
+    .portfolio-sec .projects img{
         width: 100%;
         height: 50vw;
     }
     .portfolio-sec .project img{
-        width: 100%;
-        height: 50vw;
-    }
-    .portfolio-sec .projects img{
         width: 100%;
         height: 50vw;
     }
@@ -461,10 +477,22 @@ color: aliceblue;
     .portfolio-sec .projects{
         margin-top: 20px;
     }
-    .sample-sec .project{
-        margin-top: 20px;
+    .previous-work{
+        grid-template-columns: repeat(1, 1fr);
+        margin-left: 33px;
     }
-    
+    .card2{
+        margin-top: 15px;
+    }
+    .card2 img{
+        height: 30vh;
+    }
+    .sample-sec{
+        width: 100%;
+    }
+    .skill-sec{
+        width: 100%;
+    }
     .footer{
         width: 100%;
         text-align: center;
@@ -485,9 +513,6 @@ color: aliceblue;
         width: 100%;
     }
     .about-section{
-        width: 100%;
-    }
-    .sample-sec{
         width: 100%;
     }
     .footer{
