--- a/style/style.css
+++ b/style/style.css
@@ -555,5 +555,19 @@ color: aliceblue;
         align-items: center;
         justify-content: center;
         }
+        .previous-work{
+            grid-template-columns: repeat(2, 1fr);
+            margin-left: 50px;
+            width: 100%;
+        }
+        .card2{
+            margin-top: 15px;
+        }
+        .card2 img{
+            height: 30vh;
+        }
+        .sample-sec{
+            width: 100%;
+        }
 }
 /* media query for tab end */
