--- a/style/style.css
+++ b/style/style.css
@@ -45,7 +45,7 @@ body{
     justify-content: center;
     }
     .first-section{
-        background-color: rgb(108, 11, 153);
+        background-color: rgb(36, 0, 53);
         background-image: radial-gradient(270px circle at 0% 0%, white, transparent 100%),
         radial-gradient(220px circle at 90% 70%, rgb(151, 144, 144), transparent 100%)
         ;
@@ -116,7 +116,7 @@ body{
 
     /* about section start */
 .about-section{
-    background-color: rgb(108, 11, 153);
+    background-color:  rgb(36, 0, 53);
     background-image: radial-gradient(270px circle at 0% 0%, white, transparent 100%),
     radial-gradient(220px circle at 90% 70%, rgb(151, 144, 144), transparent 100%)
     ;
@@ -144,7 +144,7 @@ body{
 
  /* services section start */
  .services-sec{
-    background-color: rgb(108, 11, 153);
+    background-color:  rgb(74, 8, 105);
         background-image: radial-gradient(270px circle at 0% 0%, white, transparent 100%),
         radial-gradient(220px circle at 90% 70%, rgb(151, 144, 144), transparent 100%)
         ;
@@ -312,12 +312,12 @@ body{
 
 /* sills section start */
 .skills-section{
-    background-color:rgb(108, 11, 153);
+    background-color: rgb(36, 0, 53);
 }
 
 /* portfilio section start */
 .portfolio-sec{
-    background-color: rgb(108, 11, 153);
+    background-color:  rgb(36, 0, 53);
     background-image: radial-gradient(270px circle at 0% 0%, white, transparent 100%),
     radial-gradient(220px circle at 90% 70%, rgb(151, 144, 144), transparent 100%)
     ;
@@ -349,7 +349,7 @@ body{
 /* sample section start */
 
 .sample-sec{
-    background-color: rgb(108, 11, 153);
+    background-color:  rgb(36, 0, 53);
     background-image: radial-gradient(270px circle at 0% 0%, white, transparent 100%),
     radial-gradient(220px circle at 90% 70%, rgb(151, 144, 144), transparent 100%)
     ;
@@ -386,6 +386,110 @@ body{
     grid-template-columns: repeat(3, 1fr);
     margin-left: 100px;
 }
+/* contact section start */
+.contact-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: linear-gradient(to bottom, #f1f4f9, #dff1ff);
+}
+.contact-section .color{
+    position: absolute;
+    filter: blur(130px);
+}
+.contact-section .color:nth-child(1){
+    width: 500px;
+    height: 500px;
+    background-color: #ff0080;
+    top: 3750px;
+}
+.contact-section .color:nth-child(2){
+    width: 500px;
+    height: 500px;
+    background-color: #f0f19b;
+    bottom:-3730px;
+    left: 550px;
+}
+.contact-section .color:nth-child(3){
+    width: 400px;
+    height: 400px;
+    background-color: #7d019c;
+    bottom:-3700px;
+    right: 480px;
+}
+.box{
+    position: relative;
+}
+.container-form{
+    position: relative;
+    width: 800px;
+    height: 80vh;
+    background: rgba(255, 255, 255, .3);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    backdrop-filter: blur(5px);
+    box-shadow: 0 25px 45px rgba(0, 0, 0, .2);
+    border: 1px solid rgba(255, 255, 255, .5);
+    border-right:1px solid rgba(255, 255, 255, .2);
+    border-bottom: 1px solid rgba(255, 255, 255, .2);
+}
+.form{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    padding: 45px;
+}
+.form h4{
+    position: relative;
+    color: aliceblue;
+    font-weight: 600;
+    font-size: 20x;
+    letter-spacing: 1px;
+    margin-bottom: 40px;
+}
+.form .inputBox{
+    width: 100%;
+    margin-top: 20px;
+}
+.form .inputBox input{
+    width: 100%;
+    background: rgba(255, 255, 255, .2);
+    border: none;
+    outline: none;
+    padding: 10px 20px;
+    border: 1px solid rgba(255, 255, 255, .5);
+    border-right:1px solid rgba(255, 255, 255, .2);
+    border-bottom: 1px solid rgba(255, 255, 255, .2);
+    border-radius: 5px;
+    font-size: 16px;
+    letter-spacing: 1px;
+}
+.form .inputBox2 input{
+    width: 100%;
+    background: rgba(255, 255, 255, .2);
+    border: none;
+    outline: none;
+    padding: 10px 20px;
+    border: 1px solid rgba(255, 255, 255, .5);
+    border-right:1px solid rgba(255, 255, 255, .2);
+    border-bottom: 1px solid rgba(255, 255, 255, .2);
+    border-radius: 5px;
+    font-size: 16px;
+    letter-spacing: 1px;
+    margin-top: 20px;
+}
+.form .inputBox input::placeholder{
+    color: #dff1ff;
+}
+.form .inputBox input[type="submit"]{
+    background: #f1f4f9;
+color: black;
+max-width: 100px;
+font-weight: 600;
+}
 /* footer section start */
 .footer{
     background:rgb(56, 0, 82);
@@ -420,7 +524,7 @@ color: aliceblue;
         padding: 0;
     }
     .first-section{
-        background-color: rgb(108, 11, 153);
+        background-color:  rgb(36, 0, 53);
         background-image: radial-gradient(270px circle at 0% 0%, white, transparent 100%),
         radial-gradient(220px circle at 90% 70%, rgb(151, 144, 144), transparent 100%)
         ;
@@ -545,7 +649,7 @@ color: aliceblue;
     align-items: center;
     }
     .first-section{
-        background-color: rgb(108, 11, 153);
+        background-color:  rgb(36, 0, 53);
         background-image: radial-gradient(270px circle at 0% 0%, white, transparent 100%),
         radial-gradient(220px circle at 90% 70%, rgb(151, 144, 144), transparent 100%)
         ;
