--- a/style/style.css
+++ b/style/style.css
@@ -423,8 +423,8 @@ body{
 }
 .container-form{
     position: relative;
-    width: 800px;
-    height: 80vh;
+    width: 600px;
+    height:80vh;
     background: rgba(255, 255, 255, .3);
     border-radius: 10px;
     display: flex;
@@ -440,7 +440,6 @@ body{
     width: 100%;
     height: 100%;
     position: relative;
-    padding: 45px;
 }
 .form h4{
     position: relative;
@@ -520,6 +519,33 @@ color: aliceblue;
     border-bottom:2px solid rgba(255, 255, 255, .2);
     align-items: center;
     }
+    .contact-section{
+        width: 100%;
+    }
+    .contact-section .color:nth-child(1){
+        width: 0px;
+        height: 0px;
+        background-color: none;
+        top: 0px;
+    }
+    .contact-section .color:nth-child(2){
+        width: 0px;
+        height: 0px;
+        background-color: none;
+        bottom:0px;
+        left: 0px;
+    }
+    .contact-section .color:nth-child(3){
+        width: 0px;
+        height: 0px;
+        background-color: none;
+        bottom:0px;
+        right:0px;
+    }
+    .form{
+        width: 60vw;
+        height: 100%;
+    }
     .container{
         padding: 0;
     }
@@ -546,6 +572,21 @@ color: aliceblue;
         display: flex;
         padding: 0;
         margin-bottom: 20px;
+    }
+    .container-form{
+        position: relative;
+        width: 120vw;
+        height:100%;
+        background: rgba(255, 255, 255, .3);
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        backdrop-filter: blur(5px);
+        box-shadow: 0 25px 45px rgba(0, 0, 0, .2);
+        border: 1px solid rgba(255, 255, 255, .5);
+        border-right:1px solid rgba(255, 255, 255, .2);
+        border-bottom: 1px solid rgba(255, 255, 255, .2);
     }
     .services-sec{
         width: 100%;
@@ -674,6 +715,33 @@ color: aliceblue;
         }
         .sample-sec{
             width: 100%;
+        }
+        .contact-section{
+            width: 100%;
+        }
+        .contact-section .color:nth-child(1){
+            width: 0px;
+            height: 0px;
+            background-color: none;
+            top: 0px;
+        }
+        .contact-section .color:nth-child(2){
+            width: 0px;
+            height: 0px;
+            background-color: none;
+            bottom:0px;
+            left: 0px;
+        }
+        .contact-section .color:nth-child(3){
+            width: 0px;
+            height: 0px;
+            background-color: none;
+            bottom:0px;
+            right:0px;
+        }
+        .form{
+            width: 60vw;
+            height: 100%;
         }
 }
 /* media query for tab end */
