--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,9 @@ body{
     border-bottom:2px solid rgba(255, 255, 255, .2);
     align-items: center;
 }
+button.navbar-toggler.collapsed{
+    padding: 0;
+}
 .navbar::before{
     content: "";
     left: 0;
@@ -52,67 +55,6 @@ body{
         width: 100%;
         height: 100vh;
     }
-
-    /* .bubble img{
-        width: 50px;
-        animation: bubble 6s linear infinite;
-        }
-        .bubble{
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: space-around;
-            position: absolute;
-            bottom: 0;
-        }
-        @keyframes bubble{
-            0%{
-                transform: translateY(-80vh);
-                opacity: 0;
-            }
-            50%{
-                opacity: 1;
-            }
-            70%{
-                opacity: 1;
-            }
-            100%{
-                transform: translateY(-100);
-                opacity: 0;
-            }
-        }
-        .bubble img:nth-child(1){
-            animation-delay: 4s;
-        }
-        .bubble img:nth-child(2){
-            animation-delay: .1ms;
-        }
-        .bubble img:nth-child(3){
-            animation-delay: 3s;
-        }
-        .bubble img:nth-child(4){
-            animation-delay: 5ms;
-        }
-        .bubble img:nth-child(5){
-            animation-delay: .1s;
-        }
-        .bubble img:nth-child(6){
-            animation-delay: 6s;
-        }
-        .bubble img:nth-child(7){
-            animation-delay: .9s;
-        }
-        .bubble img:nth-child(8){
-            animation-delay: .4s;
-        }
-        .bubble img:nth-child(9){
-            animation-delay: 1ms;
-        }
-        .bubble img:nth-child(10){
-            animation-delay: .1s;
-        } */
-    /* home section end */
-
 
     /* about section start */
 .about-section{
@@ -321,6 +263,14 @@ body{
     background-image: radial-gradient(270px circle at 0% 0%, white, transparent 100%),
     radial-gradient(220px circle at 90% 70%, rgb(151, 144, 144), transparent 100%)
     ;
+}
+.port{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+.project,
+.projects{
+    margin: 50px;
 }
 .project img{
     height: 20vw;
@@ -587,23 +537,35 @@ color: aliceblue;
     .about .hire-me {
         margin-bottom: 15px;
     }
-    .portfolio-sec .projects img{
-        width: 100%;
-        height: 50vw;
+    .port{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
     }
-    .portfolio-sec .project img{
-        width: 100%;
-        height: 50vw;
+    .project,
+    .projects{
+        margin: 20px;
     }
-    .portfolio-sec .project{
-        margin-top: 20px;
+    .project img{
+        height: 60vw;
     }
-    .portfolio-sec .projects{
-        margin-top: 20px;
+    .projects img{
+        height: 60vw;
     }
-    .project-row{
-        margin: 0px;
+    .project img{
+        transition: transform 1500ms;
     }
+    .projects img{
+        transition: transform 1500ms;
+    }
+    .project img:hover{
+        transform: scale(1.2);
+        border-radius: 10px;
+    }
+    .projects img:hover{
+        transform: scale(1.2);
+        border-radius: 10px;
+    }
+    
     .previous-work{
         grid-template-columns: repeat(1, 1fr);
         margin-left: 0px;
