--- a/style/style.css
+++ b/style/style.css
@@ -48,7 +48,7 @@ button.navbar-toggler.collapsed{
     justify-content: center;
     }
     .first-section{
-        background-color: rgb(36, 0, 53);
+        background-color: rgb(90, 18, 97);
         background-image: radial-gradient(270px circle at 0% 0%, white, transparent 100%),
         radial-gradient(220px circle at 90% 70%, rgb(151, 144, 144), transparent 100%)
         ;
@@ -58,7 +58,7 @@ button.navbar-toggler.collapsed{
 
     /* about section start */
 .about-section{
-    background-color:  rgb(36, 0, 53);
+    background-color:  rgb(90, 18, 97);
     background-image: radial-gradient(270px circle at 0% 0%, white, transparent 100%),
     radial-gradient(220px circle at 90% 70%, rgb(151, 144, 144), transparent 100%)
     ;
@@ -86,7 +86,7 @@ button.navbar-toggler.collapsed{
 
  /* services section start */
  .services-sec{
-    background-color:  rgb(74, 8, 105);
+    background-color:  rgb(90, 18, 97);
         background-image: radial-gradient(270px circle at 0% 0%, white, transparent 100%),
         radial-gradient(220px circle at 90% 70%, rgb(151, 144, 144), transparent 100%)
         ;
@@ -254,12 +254,12 @@ button.navbar-toggler.collapsed{
 
 /* sills section start */
 .skills-section{
-    background-color: rgb(36, 0, 53);
+    background-color: rgb(90, 18, 97);
 }
 
 /* portfilio section start */
 .portfolio-sec{
-    background-color:  rgb(36, 0, 53);
+    background-color:  rgb(90, 18, 97);
     background-image: radial-gradient(270px circle at 0% 0%, white, transparent 100%),
     radial-gradient(220px circle at 90% 70%, rgb(151, 144, 144), transparent 100%)
     ;
@@ -270,7 +270,7 @@ button.navbar-toggler.collapsed{
 }
 .project,
 .projects{
-    margin: 50px;
+    margin: 20px 30px;
 }
 .project img{
     height: 20vw;
@@ -279,17 +279,17 @@ button.navbar-toggler.collapsed{
     height: 20vw;
 }
 .project img{
-    transition: transform 1500ms;
+    transition: transform 1000ms;
 }
 .projects img{
-    transition: transform 1500ms;
+    transition: transform 1000ms;
 }
 .project img:hover{
-    transform: scale(1.2);
+    transform: scale(1.1);
     border-radius: 10px;
 }
 .projects img:hover{
-    transform: scale(1.2);
+    transform: scale(1.1);
     border-radius: 10px;
 }
 
@@ -300,7 +300,7 @@ button.navbar-toggler.collapsed{
 /* sample section start */
 
 .sample-sec{
-    background-color:  rgb(36, 0, 53);
+    background-color:  rgb(90, 18, 97);
     background-image: radial-gradient(270px circle at 0% 0%, white, transparent 100%),
     radial-gradient(220px circle at 90% 70%, rgb(151, 144, 144), transparent 100%)
     ;
@@ -334,65 +334,23 @@ button.navbar-toggler.collapsed{
 
 }
 .previous-work{
+    display: grid;
     grid-template-columns: repeat(3, 1fr);
-    margin-left: 100px;
+    justify-content: center;
+    align-items: center;
+}
+.card2{
+    margin: 20px 30px;
 }
 /* contact section start */
 .contact-section{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: linear-gradient(to bottom, #f1f4f9, #dff1ff);
-}
-.contact-section .color{
-    position: absolute;
-    filter: blur(100px);
-}
-.contact-section .color:nth-child(1){
-    width: 350px;
-    height: 350px;
-    background-color: #ff0080;
-}
-.contact-section .color:nth-child(2){
-    width: 250px;
-    height: 250px;
-    background-color: #f0f19b;
-}
-.contact-section .color:nth-child(3){
-    width: 150px;
-    height: 150px;
-    background-color: #7d019c;
+    background-color: rgb(90, 18, 97);
 }
 
-.container-form{
-    width: 600px;
-    height:80vh;
-    background: rgba(255, 255, 255, .3);
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    backdrop-filter: blur(5px);
-    box-shadow: 0 25px 45px rgba(0, 0, 0, .2);
-    border: 1px solid rgba(255, 255, 255, .5);
-    border-right:1px solid rgba(255, 255, 255, .2);
-    border-bottom: 1px solid rgba(255, 255, 255, .2);
-}
 .form{
-    width: 100%;
-    height: 100%;
-    position: relative;
+   
+    
 }
-.form h4{
-    color: aliceblue;
-    font-weight: 600;
-    font-size: 20x;
-    letter-spacing: 1px;
-    margin-bottom: 40px;
-}
-
-
 
 
 /* footer section start */
