--- a/style/style.css
+++ b/style/style.css
@@ -347,10 +347,15 @@ button.navbar-toggler.collapsed{
     background-color: rgb(90, 18, 97);
 }
 
-.form{
-   
-    
+.form-section{
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background: rgba(255, 255, 255, .2);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, .1);
+    backdrop-filter: blur(5px);
+    border-radius: 18px;
+    padding-bottom:  15px;
 }
+
 
 
 /* footer section start */
