twenty one commit

--- a/style/style.css
+++ b/style/style.css
@@ -30,13 +30,13 @@ button.navbar-toggler.collapsed{
     left: 100%;
 }
 .navbar a{
-    color: rgb(255, 255, 255);
+    color: rgb(255, 9, 234);
     text-decoration: none;
-    font-size: larger;
+    font-size: 25px;
     margin-left: 20px;
 }
 .navbar a:hover{
-    color: rgb(5, 255, 213);
+    color: rgb(5, 9, 255);
 }
 /* nav section end */
 
@@ -140,7 +140,7 @@ button.navbar-toggler.collapsed{
     background-repeat: no-repeat;
     background-size: 100px;
     background-position: center;
-    background-color: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
+    background-color: rgba(255, 255, 255, .2);
     backdrop-filter: blur(10px);
     border:2px solid rgba(255, 255, 255, .2);
 }
@@ -149,7 +149,7 @@ button.navbar-toggler.collapsed{
     background-repeat: no-repeat;
     background-size: 100px;
     background-position: center;
-    background-color: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
+    background-color: rgba(255, 255, 255, .2);
     backdrop-filter: blur(10px);
     border:2px solid rgba(255, 255, 255, .2);
 }
@@ -158,7 +158,7 @@ button.navbar-toggler.collapsed{
     background-repeat: no-repeat;
     background-size: 100px;
     background-position: center;
-    background-color: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
+    background-color:rgba(255, 255, 255, .2);
     backdrop-filter: blur(10px);
     border:2px solid rgba(255, 255, 255, .2);
 }
@@ -167,7 +167,7 @@ button.navbar-toggler.collapsed{
     background-repeat: no-repeat;
     background-size: 100px;
     background-position: center;
-    background-color: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
+    background-color: rgba(255, 255, 255, .2);
     backdrop-filter: blur(10px);
     border:2px solid rgba(255, 255, 255, .2);
 }
@@ -176,7 +176,7 @@ button.navbar-toggler.collapsed{
     background-repeat: no-repeat;
     background-size: 100px;
     background-position: center;
-    background-color: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
+    background-color: rgba(255, 255, 255, .2);
     backdrop-filter: blur(10px);
     border:2px solid rgba(255, 255, 255, .2);
 }
@@ -185,7 +185,7 @@ button.navbar-toggler.collapsed{
     background-repeat: no-repeat;
     background-size: 100px;
     background-position: center;
-    background-color: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
+    background-color: rgba(255, 255, 255, .2);
     backdrop-filter: blur(10px);
     border:2px solid rgba(255, 255, 255, .2);
 }
