--- a/style/style.css
+++ b/style/style.css
@@ -262,6 +262,16 @@ button.navbar-toggler.collapsed{
     justify-content: center;
     align-items: center;
 }
+.logo{
+    margin: 15px 60px;
+    
+}
+.logo img{
+    transition: all 1s ease;
+}
+.logo img:hover{
+    transform: scale(1.3);
+}
 /* portfilio section start */
 .portfolio-sec{
     background-color:  rgb(90, 18, 97);
@@ -366,6 +376,7 @@ button.navbar-toggler.collapsed{
 /* footer section start */
 .footer{
     background:rgb(56, 0, 82);
+    height: 30vh;
 }
 .footer-link a{
 text-decoration: none;
