--- a/style/style.css
+++ b/style/style.css
@@ -59,8 +59,7 @@ button.navbar-toggler{
 }
     .first-section{
         background-color: rgb(90, 18, 97);
-        background-image: radial-gradient(270px circle at 0% 0%, white, transparent 100%),
-        radial-gradient(220px circle at 90% 70%, rgb(151, 144, 144), transparent 100%)
+        background-image: radial-gradient(270px circle at 0% 0%, white, transparent 100%)
         ;
         width: 100%;
         height: 100vh;
@@ -69,9 +68,8 @@ button.navbar-toggler{
     /* about section start */
 .about-section{
     background-color:  rgb(90, 18, 97);
-    background-image: radial-gradient(100px circle at 5% 17%, white, transparent 100%),
-    radial-gradient(220px circle at 90% 70%, rgb(151, 144, 144), transparent 100%)
-    ;
+    background-image: radial-gradient(220px circle at 90% 50%, rgb(151, 144, 144), transparent 100%)
+        ;
 }
 .about {
     margin-top: 150px;
