--- a/style/style.css
+++ b/style/style.css
@@ -479,6 +479,9 @@ color: aliceblue;
         padding: 0;
        margin: 0px 0px;
     }
+    .about-section .heading{
+        padding-top: 25px;
+    }
     .container-form{
         position: relative;
         width: 120vw;
